c3prj1_deck/grade.txt
Grading at Sat Nov  9 07:19:45 UTC 2019
Compiling deck.c
Compiling cards.c
cards.c: In function ‘suit_letter’:
cards.c:68:7: error: a label can only be part of a statement and a declaration is not a statement
       char x = 's';
       ^
cards.c:71:7: error: a label can only be part of a statement and a declaration is not a statement
       char x = 'h';
       ^
cards.c:71:12: error: redefinition of ‘x’
       char x = 'h';
            ^
cards.c:68:12: note: previous definition of ‘x’ was here
       char x = 's';
            ^
cards.c:74:7: error: a label can only be part of a statement and a declaration is not a statement
       char x = 'd';
       ^
cards.c:74:12: error: redefinition of ‘x’
       char x = 'd';
            ^
cards.c:71:12: note: previous definition of ‘x’ was here
       char x = 'h';
            ^
cards.c:77:7: error: a label can only be part of a statement and a declaration is not a statement
       char x = 'c';
       ^
cards.c:77:12: error: redefinition of ‘x’
       char x = 'c';
            ^
cards.c:74:12: note: previous definition of ‘x’ was here
       char x = 'd';
            ^
cards.c:80:7: error: a label can only be part of a statement and a declaration is not a statement
       char x = '?';
       ^
cards.c:80:12: error: redefinition of ‘x’
       char x = '?';
            ^
cards.c:77:12: note: previous definition of ‘x’ was here
       char x = 'c';
            ^
cards.c:80:12: error: unused variable ‘x’ [-Werror=unused-variable]
       char x = '?';
            ^
cards.c:83:10: error: ‘x’ undeclared (first use in this function)
   return x;
          ^
cards.c:83:10: note: each undeclared identifier is reported only once for each function it appears in
cards.c:84:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Could not compile your cards.c!

Overall Grade: FAILED
